# bb-cplusplus

./: .gitignore  CHANGELOG.md  README.md  default.env  dobi.sh  dobi.yaml  gdb-multiarch.sh  global.env  globals.yaml  local.env.template  meta.yaml  pipeline.yaml  version.yaml
builder/: Dockerfile  conan.aarch64.profile  conan.armv8.profile  conan.x86_64.profile  dobi.yaml  entrypoint.sh
ci/: .gitignore  config.yaml  email.template.yaml
codechecker/: Dockerfile  entrypoint.sh
cplusplus/: dobi.yaml
cplusplus/runtime/: Dockerfile  entrypoint.sh
example/cplusplus/: .gitignore  dobi.yaml
example/cplusplus/source/: CMakeLists.txt
example/cplusplus/source/src/: main.cpp
example/cpp/: CMakeLists.txt
example/cpp/src/: main.cpp
runtime/: Dockerfile  dobi.yaml  entrypoint.sh
service/: CMakeLists.txt  Dockerfile.dobi  dobi.yaml  service.build.sh
service/doxygen/: Doxyfile
service/include/: hello_world.h
service/src/: main.cpp
service/unit_test/: hello_world.cpp  ut_hello_world.h  ut_main.cpp
